[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/icons/commodities/money.svg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/consolas_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/gui/controls/build_info.gd" type="Script" id=3]

[node name="BuildInfo" type="VBoxContainer"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeLabel" type="Label" parent="."]
margin_right = 142.0
margin_bottom = 16.0
text = "What is built"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_top = 20.0
margin_right = 142.0
margin_bottom = 41.0
split_offset = 30

[node name="CostRow" type="HBoxContainer" parent="HSplitContainer"]
margin_right = 130.0
margin_bottom = 21.0

[node name="MoneyIcon" type="TextureRect" parent="HSplitContainer/CostRow"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="CostLabel" type="Label" parent="HSplitContainer/CostRow"]
margin_left = 20.0
margin_right = 53.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="Control" type="VSeparator" parent="HSplitContainer/CostRow"]
margin_left = 57.0
margin_right = 67.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="MaintenanceLabel" type="Label" parent="HSplitContainer/CostRow"]
margin_left = 71.0
margin_right = 82.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="Label" type="Label" parent="HSplitContainer/CostRow"]
margin_left = 86.0
margin_right = 130.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "p.t."

[node name="SinksContainer" type="HBoxContainer" parent="HSplitContainer"]
margin_left = 142.0
margin_right = 142.0
margin_bottom = 21.0
